Move example style attributes to css

--- a/examples/index.html
+++ b/examples/index.html
@@ -4,6 +4,28 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>test</title>
+    <style>
+        /* line chart styles */
+        .linePath {
+            fill: none;
+            stroke-width: 3;
+            stroke: #337;
+        }
+        .lineArea {
+            fill: #ddf;
+            stroke: none;
+        }
+        .linePoint {
+            fill: #337;
+        }
+        .axis line, .axis path {
+            stroke: #ccc;
+        }
+        .axis text {
+            fill: #888;
+            font-weight: normal;
+        }
+    </style>
 </head>
 <body>
     <script src="./dist/lineChart.js"></script>
