WIP on bubblechart

--- a/examples/index.html
+++ b/examples/index.html
@@ -28,6 +28,6 @@
     </style>
 </head>
 <body>
-    <script src="./dist/lineChart.js"></script>
+    <script src="./dist/bubbleChart.js"></script>
 </body>
 </html>
