Plot goals vs points on bubble chart

--- a/examples/index.html
+++ b/examples/index.html
@@ -6,6 +6,9 @@
     <title>test</title>
     <style>
         /* general styles */
+        text {
+            font-family: system-ui;
+        }
         .axis line, .axis path {
             stroke: #ccc;
         }
