quick and dirty bar chart

--- a/examples/index.html
+++ b/examples/index.html
@@ -71,21 +71,29 @@
         .bubble:hover {
             opacity: 1;
         }
+
+        /* bar styles */
+        .bar { fill: #88a; }
     </style>
 </head>
 <body>
     <h1>bs-d3 examples</h1>
-    <details open>
+    <details>
         <summary>Bubble chart</summary>
         <div class="chartbox bubblechart"></div>
     </details>
     <script src="./dist/bubblechart.js"></script>
 
+    <details open>
+        <summary>Bar chart</summary>
+        <div class="chartbox barchart"></div>
+    </details>
+    <script src="./dist/barchart.js"></script>
+
     <details>
         <summary>Line chart</summary>
         <div class="chartbox linechart"></div>
     </details>
-
     <script src="./dist/linechart.js"></script>
 </body>
 </html>
