Almost passable pie chart

--- a/examples/index.html
+++ b/examples/index.html
@@ -76,8 +76,9 @@
         .bar { fill: #88a; }
 
         /* pie styles */
-        .piearc { fill: #88a; transition: all 0.2s; }
-        .piearc:hover { fill: #779; }
+        .piearc { transition: all 0.2s; }
+        .piearc:hover { opacity: 0.9; transform: scale(1.05); }
+        .teamText { font-size: 10px; }
     </style>
 </head>
 <body>
