Add more sequential color scales and clean up their use a bit

--- a/examples/index.html
+++ b/examples/index.html
@@ -78,7 +78,7 @@
         /* pie styles */
         .piearc { transition: all 0.2s; }
         .piearc:hover { opacity: 0.9; transform: scale(1.05); }
-        .teamText { font-size: 10px; }
+        .teamText { font-weight: bold; font-size: 10px; }
     </style>
 </head>
 <body>
